# LiDAR_recon

./: .gitignore  CENTERPOINT_CPP_STUDY_MANUAL.md  IMPLEMENTATION_GUIDES.md
000_waymo_training_project/: README.md
01_rules/: implementation_analysis.md
02_project/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md
02_project/02_Project/: 02_Project.sln
02_project/02_Project/02_Project/: 02_Project.vcxproj  02_Project.vcxproj.filters  file_in_output.cpp  file_in_output.hpp  main.cpp  type.hpp  voxelization.cpp  voxeolization.hpp
02_project/configs/: waymo_pointpillars.yaml
02_project/dump/kitti_000000/: metadata.json
02_project/include/centerpoint/: types.hpp  voxelization.hpp
02_project/include/centerpoint/io/: bin_point_reader.hpp  debug_dump.hpp
02_project/src/: main.cpp  voxelization.cpp
02_project/src/io/: bin_point_reader.cpp  debug_dump.cpp
02_project/tools/: compare_python_cpp_voxelization.py
03_pillar_feature_project/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md
03_pillar_feature_project/dump/kitti_000000_decorated/: decorated_metadata.json
03_pillar_feature_project/include/centerpoint/: pillar_feature.hpp  types.hpp
03_pillar_feature_project/include/centerpoint/io/: decorated_dump_writer.hpp  voxel_dump_reader.hpp
03_pillar_feature_project/src/: main.cpp  pillar_feature.cpp
03_pillar_feature_project/src/io/: decorated_dump_writer.cpp  voxel_dump_reader.cpp
03_pillar_feature_project/tools/: compare_python_cpp_pillar_feature.py
04_pfn_project/: CHECKPOINT_PFN_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  VALIDATION_REPORT.md
04_pfn_project/dump/kitti_000000_pfn/: pillar_features_metadata.json
04_pfn_project/include/centerpoint/: pfn.hpp  pfn_two_layer.hpp  types.hpp
04_pfn_project/include/centerpoint/io/: decorated_dump_reader.hpp  pfn_checkpoint_reader.hpp  pillar_feature_writer.hpp
04_pfn_project/src/: main.cpp  main_checkpoint.cpp  pfn.cpp  pfn_two_layer.cpp
04_pfn_project/src/io/: decorated_dump_reader.cpp  pfn_checkpoint_reader.cpp  pillar_feature_writer.cpp
04_pfn_project/tools/: compare_python_cpp_pfn_checkpoint.py  compare_python_cpp_pfn_dummy.py  extract_pfn_weights.py  make_kitti_feature5_fixture.py
05_scatter_project/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md
05_scatter_project/include/centerpoint/: scatter.hpp  types.hpp
05_scatter_project/include/centerpoint/io/: bev_feature_writer.hpp  scatter_input_reader.hpp
05_scatter_project/src/: main.cpp  scatter.cpp
05_scatter_project/src/io/: bev_feature_writer.cpp  scatter_input_reader.cpp
05_scatter_project/tools/: compare_python_cpp_scatter.py
06_rpn_project/: CMakeLists.txt  FULL_RPN_IMPLEMENTATION_GUIDE.md  FULL_RPN_VALIDATION_REPORT.md  IMPLEMENTATION_GUIDE.md  README.md
06_rpn_project/cuda/: rpn_full_cuda.cu  rpn_kernels.cu
06_rpn_project/include/centerpoint/: rpn_cuda.hpp  rpn_dump_writer.hpp  rpn_full_cuda.hpp  rpn_full_types.hpp
06_rpn_project/include/centerpoint/io/: bev_dump_reader.hpp  rpn_output_writer.hpp  rpn_weight_reader.hpp
06_rpn_project/src/: main.cpp  main_full.cpp
06_rpn_project/src/io/: bev_dump_reader.cpp  rpn_dump_writer.cpp  rpn_output_writer.cpp  rpn_weight_reader.cpp
06_rpn_project/tools/: check_selected_rpn_values.py  compare_python_cpp_rpn_cuda.py  compare_rpn_runs.py  extract_rpn_weights.py
07_center_head_project/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  VALIDATION.md
07_center_head_project/cuda/: center_head_cuda.cu
07_center_head_project/include/centerpoint/: head.hpp
07_center_head_project/src/: head_io.cpp  main.cpp
07_center_head_project/tools/: extract_head_weights.py  validate_selected.py
08_decode_project/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  VALIDATION.md
08_decode_project/cuda/: decode_cuda.cu
08_decode_project/include/centerpoint/: decode.hpp
08_decode_project/src/: decode_io.cpp  main.cpp
08_decode_project/tools/: validate_reference.py
09_full_pipeline_project/: CMakeLists.txt  DIAGNOSTIC_REPORT.md  IMPLEMENTATION_GUIDE.md  MULTIFRAME_EVAL_REPORT.md  PREPROCESSING_AND_GEOMETRY_AUDIT.md  README.md  RUN_COMPARISON.md  VISUALIZATION_REPORT.md  preprocessing_comparison_5frames.json
09_full_pipeline_project/include/centerpoint/: waymo_sensor_archive.hpp
09_full_pipeline_project/src/: main.cpp  waymo_sensor_archive.cpp
09_full_pipeline_project/tools/: compare_waymo_eval_runs.py  debug_nms_iou.py  export_waymo_frame.py  run_waymo_multiframe_eval.py  visualize_waymo_detections.py
10_head_validation_project/: IMPLEMENTATION_GUIDE.md  README.md  VALIDATION_REPORT.md  gt_peak_reference_validation_5frames.json  head_validation_summary_5frames.json
11_reference_comparison_project/: COMPARISON_REPORT.md  IMPLEMENTATION_GUIDE.md  README.md  reference_comparison_5frames.json  rpn_probe_validation_frame000.json
12_waymo_fn_analysis_project/: ANALYSIS_REPORT.md  IMPLEMENTATION_GUIDE.md  README.md  fn_analysis_5frames.csv  fn_analysis_5frames.json
13_waymo_operating_point_project/: ANALYSIS_REPORT.md  IMPLEMENTATION_GUIDE.md  README.md  operating_point_analysis_198frames.json  stratified_recall_198frames.csv  threshold_summary_198frames.csv
14_gpu_resident_pipeline_project/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  VALIDATION_REPORT.md
14_gpu_resident_pipeline_project/cuda/: gpu_center_head.cu  gpu_postprocess.cu  gpu_preprocess.cu  gpu_rpn.cu
14_gpu_resident_pipeline_project/include/centerpoint/: gpu_center_head.hpp  gpu_postprocess.hpp  gpu_preprocess.hpp  gpu_rpn.hpp  head_weights.hpp  io.hpp  pfn_weights.hpp  rpn_weights.hpp
14_gpu_resident_pipeline_project/src/: head_weights.cpp  io.cpp  main.cpp  main_full.cpp  main_rpn.cpp  pfn_weights.cpp  rpn_weights.cpp
14_gpu_resident_pipeline_project/tools/: compare_python_gpu_head_probes.py  compare_python_gpu_preprocess.py  compare_python_gpu_rpn_probes.py  validate_gpu_detections.py
outputs/: centerpoint_cpp_cuda_progress.pptx
report/: ACTUAL_VALUES.json  LIDAR_RECON_BEGINNER_REPORT_KO.md  REPRODUCTION_LOG.md  artifact_inspection.json
(+16 files in other folders)
